@@ -137,6 +137,10 @@ class vauth {
 		$sql = "DELETE FROM `session` WHERE `expire` < '" . time() . "'"; 
 		$db_results = Dba::write($sql); 
 
+		$sql = "DELETE FROM `tmp_browse` USING `tmp_browse` LEFT JOIN `session` ON `session`.`id`=`tmp_browse`.`sid` " . 
+			"WHERE `session`.`id` IS NULL"; 
+		$db_results = Dba::write($sql); 
+
 		return true; 
 
 	} // gc
