@@ -319,7 +319,7 @@ class xmlData {
 
 			$rating = new Rating($song_id,'song'); 
 
-			$art_url = Config::get('web_path') . '/image.php?id=' . $song->album . '&auth=' . scrub_out($_REQUEST['auth']);
+			$art_url = Album::get_art_url($song->album,$_REQUEST['auth']); 
 
 			$string .= "<song id=\"$song->id\">\n" . 
 					"\t<title><![CDATA[$song->title]]></title>\n" . 
