@@ -23,7 +23,7 @@ $status = $localplay->status();
 $now_playing = $status['track_title'] ? $status['track_title'] . ' - ' . $status['track_album'] . ' - ' . $status['track_artist'] : ''; 
 ?>
 <?php Ajax::start_container('localplay_status'); ?>
-<?php show_box_top(_('Localplay Control')); ?>
+<?php show_box_top(_('Localplay Control') . ' - '. strtoupper($localplay->type)); ?>
 <?php echo _('Now Playing'); ?>:<i><?php echo $now_playing; ?></i>
 <div id="information_actions">
 <ul>
