@@ -4,7 +4,13 @@
 
 --------------------------------------------------------------------------
   v.3.5-Alpha3 
-	- Added get lyrics and album art using http proxy server #313 + username, password patch
+	- Add extension to image urls for the API will add to others as
+		needed due to additional query requirement. Needed to fix
+		some DLNA devices
+	- Fixed typo that caused the height of album art not to display
+	- Modified database and added GC for tmp_browse table
+	- Added get lyrics and album art using http proxy server #313 
+		+ username, password patch
 	- Added lyricswiki link Ticket #70
 	- Updated README language
 	- Updated getid3 library 2.0.0b4 to 2.0.0b5
